# racoder

./: .gitignore  Cargo.toml  README.md  project.txt  project2.txt
src/: agent.rs  llm.rs  logger.rs  main.rs  schema.rs  tools.rs  tui.rs
