[package]
name = "racoder"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
anyhow = "1"
thiserror = "1"
ratatui = "0.26"
crossterm = "0.27"
similar = "2"